@@ -207,16 +207,17 @@ trait Expressions extends Base with ParserPattern with Predicates with StringLit
 
   def countStar: Parser[Expression] = ignoreCase("count") ~> parens("*") ^^^ CountStar()
 
-  def pathExpression: Parser[Expression] = usePath(translate) ^^ {//(pathPattern => PathExpression(pathPattern))
+  def pathExpression: Parser[Expression] = usePath(translate) ^^ {
     case Seq(x:ShortestPath) => ShortestPathExpression(x)
     case patterns => PathExpression(patterns)
   }
 
   private def translate(abstractPattern: AbstractPattern): Maybe[Pattern] = matchTranslator(abstractPattern) match {
-      case Yes(Seq(np)) if np.isInstanceOf[NamedPath] => No(Seq("Can't assign to an identifier in a pattern expression"))
-      case Yes(p@Seq(pattern:Pattern)) => Yes(p.asInstanceOf[Seq[Pattern]])
-      case n: No => n
-    }
+    case Yes(p) if p.size == 1 && p.head.isInstanceOf[SingleNode] => No(Seq(""))
+    case Yes(Seq(np)) if np.isInstanceOf[NamedPath]               => No(Seq("Can't assign to an identifier in a pattern expression"))
+    case Yes(p@Seq(pattern: Pattern))                             => Yes(p.asInstanceOf[Seq[Pattern]])
+    case n: No                                                    => n
+  }
 
   def matchTranslator(abstractPattern: AbstractPattern): Maybe[Any]
 }
